--- a/index.html
+++ b/index.html
@@ -6,7 +6,17 @@
     <title>Document</title>
 </head>
 <body>
-
-     
+    <h1>Мои увлечения</h1>
+    <p> Хобби играют важную роль в моей жизни. Т.к. без дела я просто не могу сидеть на месте. Мне всегда нужно чем-то заниматься.</p>
+    <ul>
+        <li>Я люблю путешествовать. В моей копилке стран не так много, но впечатлений от этого все равно "хоть отбавляй".
+            <img src="/images/alanya.jpg" alt="Аланья">
+            <img src="/images/lvov.jpg" alt="Львов">
+            <img src="/images/sharm.jpg" alt="Шарм">
+        </li>
+        <li> Люблю разного рода активности, в виде катания на лошадях, велосипеде, сплав на байдарках. Да даже простое времяпрепровождение с семьей - для меня это тоже та еще активность.</li>
+        <li> А еще я люблю шить одежду. Шью ее не только себе, но и своей семье, друзьям, знакомым. Мне это доставляет огромное удовольствие, особенно то прекрасное чувство, когда из абсолютно разных и непонятных деталей рождается полноценная вещь. Будь то платье, брюки, тренч или пиджак.</li>
+    </ul>
+    <script src="./script.js"></script>
 </body>
 </html>
