--- a/index.html
+++ b/index.html
@@ -10,11 +10,15 @@
     <p> Хобби играют важную роль в моей жизни. Т.к. без дела я просто не могу сидеть на месте. Мне всегда нужно чем-то заниматься.</p>
     <ul>
         <li>Я люблю путешествовать. В моей копилке стран не так много, но впечатлений от этого все равно "хоть отбавляй".
-            <img src="/images/alanya.jpg" alt="Аланья">
-            <img src="/images/lvov.jpg" alt="Львов">
-            <img src="/images/sharm.jpg" alt="Шарм">
+            <img src="../My-hobbies/images/alanya.jpg" alt="Аланья">
+            <img src="../My-hobbies/images/lvov.jpg" alt="Львов">
+            <img src="../My-hobbies/images/sharm.jpg" alt="Шарм">
         </li>
-        <li> Люблю разного рода активности, в виде катания на лошадях, велосипеде, сплав на байдарках. Да даже простое времяпрепровождение с семьей - для меня это тоже та еще активность.</li>
+        <li> Люблю разного рода активности, в виде катания на лошадях, велосипеде, сплав на байдарках. Да даже простое времяпрепровождение с семьей - для меня это тоже та еще активность.
+            <img src="../My-hobbies/images/castle.jpg" alt="Замок">
+            <img src="../My-hobbies/images/kayak.jpg" alt="Байдарка">
+            <img src="../My-hobbies/images/hourse.jpg" alt="Лошадь">
+        </li>
         <li> А еще я люблю шить одежду. Шью ее не только себе, но и своей семье, друзьям, знакомым. Мне это доставляет огромное удовольствие, особенно то прекрасное чувство, когда из абсолютно разных и непонятных деталей рождается полноценная вещь. Будь то платье, брюки, тренч или пиджак.</li>
     </ul>
     <script src="./script.js"></script>
