--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
             <img src="../My-hobbies/images/kayak.jpg" alt="Байдарка">
             <img src="../My-hobbies/images/hourse.jpg" alt="Лошадь">
         </li>
-        <li> А еще я люблю шить одежду. Шью ее не только себе, но и своей семье, друзьям, знакомым. Мне это доставляет огромное удовольствие, особенно то прекрасное чувство, когда из абсолютно разных и непонятных деталей рождается полноценная вещь. Будь то платье, брюки, тренч или пиджак.</li>
+        <li> А еще я люблю шить одежду. Шью ее не только себе, но и своей семье, друзьям, знакомым. Мне это доставляет огромное удовольствие, особенно то прекрасное чувство, когда из абсолютно разных и непонятных деталей рождается полноценная вещь. Будь то платье, брюки, тренч или пиджак.
+            <img src="../My-hobbies/images/sewing-machine.JPG" alt="Машинка">
+            <img src="../My-hobbies/images/little-dress.jpg" alt="Платье">
+            <img src="../My-hobbies/images/shirt.JPG" alt="Рубашка">
+        </li>
     </ul>
     <script src="./script.js"></script>
 </body>
