--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Мои увлечения</h1>
+    <h2>Алена Лукьянова</h2>
     <p> Хобби играют важную роль в моей жизни. Т.к. без дела я просто не могу сидеть на месте. Мне всегда нужно чем-то заниматься.</p>
     <ul>
         <li>Я люблю путешествовать. В моей копилке стран не так много, но впечатлений от этого все равно "хоть отбавляй". 
